--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/src/index.js",
     "dev": "ts-node src/index.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma migrate deploy && tsc"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
